tenzir/tests/node/run/runtime_errors.tql
// node: true
// error: true
// skip: non-determinstic behavior

pipeline::run {
  from {x: 1}
  write_csv
  read_json
  discard
}, id="test-id"
